# controller/coba.go
@@ -18,6 +18,14 @@ import (
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
+// GetAllPresensi godoc
+// @Summary Get All Data Presensi.
+// @Description Mengambil semua data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Success 200 {object} Presensi
+// @Router /presensi [get]
 func Home(c *fiber.Ctx) error {
  	return c.Status(fiber.StatusOK).JSON(fiber.Map{
  		"github_repo": "https://github.com/stefanymelda/stefanyapp",
